WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/OpportunitySplit.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>