WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Implement</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>SPIFF</fullName>
            </value>
            <value>
                <fullName>Lead Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>