WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/fields/EFS_Contract__c.field-meta.xml
<CustomField>
    <fullName>EFS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract (EFS)</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Opportunity Splits</relationshipLabel>
    <relationshipName>Opportunity_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>