WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/fields/Percent_contribution__c.field-meta.xml
<CustomField>
    <fullName>Percent_contribution__c</fullName>
    <description>EFS data load</description>
    <label>EFS Percent Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>