WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/fields/Projected_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Projected_Gallons__c</fullName>
    <formula>Opportunity.Projected_Monthly_Gallons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>