WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/fields/SplitOwnerManager__c.field-meta.xml
<CustomField>
    <fullName>SplitOwnerManager__c</fullName>
    <description>Used for reporting</description>
    <formula>SplitOwner.Manager.Username</formula>
    <label>SplitOwnerManager</label>
    <type>Text</type>
</CustomField>