WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/fields/SplitOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>SplitOwnerRole__c</fullName>
    <formula>SplitOwner.UserRole.Name</formula>
    <label>SplitOwnerRole</label>
    <type>Text</type>
</CustomField>