WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>EFS data load</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EFS User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>