WexGit/Wex_DX/force-app/main/default/objects/OpportunitySplit/fields/UserManagerCheck__c.field-meta.xml
<CustomField>
    <fullName>UserManagerCheck__c</fullName>
    <description>Used for reporting to only show direct reports</description>
    <formula>$User.Id=SplitOwner.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserManagerCheck</label>
    <type>Checkbox</type>
</CustomField>